--- a/main/styles.css
+++ b/main/styles.css
@@ -37,6 +37,10 @@ h2{
     color: var(--orange);
 }
 
+p{
+    line-height: 1.5;
+}
+
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -61,22 +65,39 @@ h2{
     background-color: var(--white);
 }
 
+.banner nav{
+    height: 100%;
+}
+
 .banner ul{
     display: flex;
-
-    justify-content: center;
-    align-items: center;
-    gap: 2.5rem;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    gap: 1.5rem;
 
     list-style: none;
 }
 
+.banner li{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+}
+
 .nav-item{
+    padding: 40% 0.5rem;
+
     font-size: var(--regular-font);
     font-weight: var(--bold-font);
     text-decoration: none;
 
     color: var(--black);
+}
+
+.banner li:hover{
+    background-color: #F2F0F0;
 }
 
 .button-filled{
@@ -92,7 +113,7 @@ h2{
 }
 
 .button-filled:hover{
-    background-color: var(--black);
+    background-color: #C04214;
     color: var(--white);
 }
 
@@ -255,6 +276,12 @@ h2{
 
     color: var(--orange);
     background-color: var(--black);
+}
+
+.inversed-btn:hover{
+    background-color: var(--orange);
+    color: var(--white);
+    border-color: var(--orange);
 }
 
 /* Start of Experience Section*/
